@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pyquery
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyquery/ChangeLog,v 1.13 2012/04/16 02:23:26 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyquery/ChangeLog,v 1.14 2012/05/15 16:03:43 xarthisius Exp $
+
+*pyquery-1.2.1 (15 May 2012)
+
+  15 May 2012; Kacper Kowalik <xarthisius@gentoo.org> +pyquery-1.2.1.ebuild:
+  Version bump
 
   16 Apr 2012; Jeroen Roovers <jer@gentoo.org> pyquery-1.1.1.ebuild:
   Marked ~hppa (bug #411761).
